--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "api-utils",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "API for querying token ownership with caching",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +12,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "ethers": "^6.12.1",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongoose": "^5.12.13",
+    "node-cron": "^2.0.3"
   }
 }
