--- a/package.json
+++ b/package.json
@@ -2,20 +2,24 @@
     "name": "api-utils",
     "version": "1.0.0",
     "description": "",
-    "main": "server.js",
+    "main": "server.ts",
     "scripts": {
-      "start": "ts-node server.ts"
+      "start": "node dist/server.js",
+      "build": "tsc"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
       "cors": "^2.8.5",
-      "ethers": "^5.7.0",
+      "ethers": "^6.12.1",
       "express": "^4.19.2",
-      "mongoose": "^6.0.14",
-      "node-cron": "^3.0.0",
-      "typescript": "^4.4.4",
+      "mongoose": "^6.1.8",
+      "typescript": "^4.5.4"
+    },
+    "devDependencies": {
+      "@types/express": "^4.17.13",
+      "@types/node": "^16.11.10",
       "ts-node": "^10.4.0"
     }
   }
