--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
     "version": 2,
     "builds": [
-      { "src": "server.ts", "use": "@vercel/node" },
-      { "src": "src/**/*.ts", "use": "@vercel/node" }
+      { "src": "server.ts", "use": "@vercel/node" }
     ],
     "routes": [
       { "src": "/api/(.*)", "dest": "/server.ts" }
