--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "ethers": "^5.0.0",
+        "bottleneck": "^2.19.5",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
+        "ethers": "^5.0.0",
         "express": "^4.19.2",
         "mongoose": "^6.1.8",
         "typescript": "^4.5.4"
