--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "typescript": "^4.5.4"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.17",
         "@types/express": "^4.17.13",
         "@types/node": "^16.11.10",
         "ts-node": "^10.4.0"
